testsuite/tests/parser/should_fail/RecordDotSyntaxFail1.hs
{-# LANGUAGE RecordDotSyntax #-}

no Foo { bar.baz = x } = undefined
  -- Syntax error: Field selector syntax doesn't participate
  -- in patterns
