testsuite/tests/parser/should_fail/RecordDotSyntaxFail1.stderr

RecordDotSyntaxFail1.hs:3:10: error: [GHC-26832]
    Use of OverloadedRecordDot '.' not valid ('.' isn't allowed when constructing records or in record patterns)
